Corrected visibiluty of images

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -316,6 +316,8 @@ body
         align-items: center
     &__building-img
         margin-bottom: 45px
+        position: relative
+        z-index: 100
 
     //Нижняя часть
     &__bottom
